# adlib

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  meson.build  meson_options.txt
benchmarks/: CMakeLists.txt  array_benchmark.c  btree_benchmark.h  btree_map_benchmark.c  charconv_benchmark.c  hash_comparison.c  hashtable_benchmark.c  heap_benchmark.c  meson.build
include/: array.h  avl_tree.h  btree.h  charconv.h  compiler.h  config.h.in  dbuf.h  dstring.h  fortify.h  hash.h  hashtable.h  heap.h  macros.h  random.h  rb_tree.h  stringview.h  uint128.h  utils.h
src/: array.c  avl_tree.c  btree.c  charconv.c  dbuf.c  dstring.c  fortify.c  hash.c  hashtable.c  random.c  rb_tree.c  stringview.c  utils.c
staging/: CMakeLists.txt  bitmap.c  bitmap.h  btree.c  cbuf.c  cbuf.h  error.c  hashtable_chunked.h  hashtable_linked.h  hashtable_maxdist.h  hashtable_robinhood.h  heap.c  heap.h  lfqueue.c  lfqueue.h  linear_hashing.c  list.c  list.h  locktest.c  malloc.c  malloc.h  mbuf.c  mbuf.h  mem_arena.c  mem_arena.h  meson.build  mprintf.c  mprintf.h  mutex.h  semaphore.h  sort.c  sort.h  spinlock.h  uint128.c  utf.h
testing/: CMakeLists.txt  common.c  common.h  list.h  meson.build  single_testing.c  testing.c
testing/include/: testing.h
tests/: CMakeLists.txt  array.c  avl_tree.c  btree_benchmark.h  btree_map.c  btree_set.c  btree_set_benchmark.c  btree_test.h  charconv.c  dbuf.c  dstring.c  hash.c  hash_benchmark.c  hash_comparison.c  hashmap.c  hashset.c  hashtable_benchmark.c  heap.c  heap_benchmark.c  json.c  meson.build  random.c  random_benchmark.c  rb_tree.c  selftests.c  single_testing.c  stringview.c  testing.c  testing.h  testing_common.c  uint128.c  utils.c
tools/: diff_benchmark_results.py
