option('tests', type : 'boolean', value : true, description : 'enable tests')
option('single-tests', type : 'boolean', value : false, description : 'enable single tests')
option('benchmarks', type : 'boolean', value : false, description : 'enable benchmarks')
option('staging', type : 'boolean', value : false, description : 'compile code in staging')
option('disable-feature-detection', type : 'boolean', value : false, description : 'disable detection for compiler builtins and non-standard library functions to test the fallback codepaths')
option('array-initial-size', type : 'integer', value : 8, description : 'Initial size of a dynamic array')
option('array-growth-factor-numerator', type : 'integer', value : 8, description : 'Numerator of the array growth factor')
option('array-growth-factor-denominator', type : 'integer', value : 5, description : 'Denominator of the array growth factor')
option('dbuf-initial-size', type : 'integer', value : 16, description : 'Initial size of a dynamic byte buffer (dbuf)')
option('dstring-initial-size', type : 'integer', value : 8, description : 'Initial size of a dstring')
option('dstring-growth-factor-numerator', type : 'integer', value : 8, description : 'Numerator of the dstring growth factor')
option('dstring-growth-factor-denominator', type : 'integer', value : 5, description : 'Denominator of the dstring growth factor')
option('hashtable-implementation', type : 'combo', choices : ['quadratic', 'hopscotch', 'robinhood'], description : 'Hashtable implementation')
